changed header image to public folder as temporary workaround for build error

--- a/src/content/blog/infuriating-design-flaw-strategy-games.mdx
+++ b/src/content/blog/infuriating-design-flaw-strategy-games.mdx
@@ -2,7 +2,7 @@
 title: "Why is this infuriating UI design flaw so common in modern strategy games?"
 description: "Lorem ipsum dolor sit amet"
 pubDate: "Jan 04 2024"
-heroImage: "/src/images/blogs/infuriating-design-flaw-strategy-games/header-modern-strategy-games-ui.jpg"
+heroImage: "/blog-headers/header-modern-strategy-games-ui.jpg"
 ---
 
 import BlogWidget from "../../components/BlogWidget.astro";
@@ -90,6 +90,6 @@ This is a massive downgrade, and overall, I found the interfaces of the sequel t
 
 ## Good Graphic Design !== Good UX
 
-The role of a UX designer requires navigating the delicate balance between aesthetics and functionality, and often entails pushing back against visually appealing designs that sacrifice practicality for beauty. The allure of a "pretty" interface should never overshadow the paramount importance of usability. Thankfully, creating a user interface that excels in both aesthetics and functionality is not an either/or proposition, though it does demand more time to perfect. But in the end, the extra effort is _always_ worth the results.
+The role of a UX designer requires navigating the delicate balance between aesthetics and functionality, and often entails pushing back against visually appealing designs that sacrifice practicality for beauty. Thankfully, creating a user interface that excels in both aesthetics and functionality is not an either/or proposition, and while it may take more time, the extra effort is _always_ worth the results.
 
 </div>
