removed work experience from home page

--- a/src/content/blog/6-things-ux-engineers-can-do-that-engineers-cant.mdx
+++ b/src/content/blog/6-things-ux-engineers-can-do-that-engineers-cant.mdx
@@ -20,7 +20,7 @@ Here are six things that UX engineers can do that are beyond the abilities of mo
 <div class="flex justify-center pt-6 p-2">
   <span class="bold"> See Also: &nbsp;</span>
   <a href="/blog/5-things-ux-engineers-can-do-that-designers-cant/">
-    5 Things UX Engineers Can Do That (Most) Engineers Can’t
+    5 Things UX Engineers Can Do That (Most) Designers Can’t
   </a>
 </div>
 
